--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <div id="flex">
-      <div class="item" id="uno">1</div>
-      <div class="item" id="dos">2</div>
-      <div class="item" id="tres">3</div>
-      <div class="item" id="cuatro">4</div>
+    <h1>DICE</h1>
+    <div class="container">
+      <div class="cara__1">
+        <div class="punto"></div>
+      </div>
+      <div class="cara__2">
+        <div class="punto"></div>
+        <div class="punto"></div>
+      </div>
+      <div class="cara__3">
+        <div class="punto"></div>
+        <div class="punto"></div>
+        <div class="punto"></div>
+      </div>
+      <div class="cara__4">
+        <div class="colum">
+          <div class="punto"></div>
+          <div class="punto"></div>
+        </div>
+        <div class="colum">
+          <div class="punto"></div>
+          <div class="punto"></div>
+        </div>
+      </div>
+      <div class="cara__5">
+        <div class="colum">
+          <div class="punto"></div>
+          <div class="punto"></div>
+        </div>
+        <div class="punto centro"></div>
+        <div class="colum">
+          <div class="punto"></div>
+          <div class="punto"></div>
+        </div>
+      </div>
+      <div class="cara__6">
+        <div class="colum">
+          <div class="punto"></div>
+          <div class="punto"></div>
+          <div class="punto"></div>
+        </div>
+        <div class="colum">
+          <div class="punto"></div>
+          <div class="punto"></div>
+          <div class="punto"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
