--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>DICE</h1>
+    <header></header>
     <div class="container">
       <div class="cara__1">
         <div class="punto"></div>
@@ -56,5 +56,6 @@
         </div>
       </div>
     </div>
+    <footer><p>DICE - 2020</p></footer>
   </body>
 </html>
